--- a/res/layout/activity_mine_secretary_list.xml
+++ b/res/layout/activity_mine_secretary_list.xml
@@ -82,6 +82,7 @@
         android:layout_height="match_parent" >
 
         <LinearLayout
+            android:visibility="invisible"
             android:id="@+id/empty_liner"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -124,7 +125,7 @@
 			    android:layout_width="match_parent"
                 android:layout_height="match_parent"
 			    > 
-            <com.lansun.qmyo.view.TestMyListView
+            <com.lansun.qmyo.view.ActivityMyListView
                 android:id="@+id/lv_secretary_list"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -137,6 +138,7 @@
                 android:divider="@color/app_bg"
                 android:listSelector="@android:color/transparent"
                 android:scrollbars="none"
+                android:overScrollMode="never"
                 /><!-- style="@style/w_h_full"  android:divider="@null" -->
                </LinearLayout> 
         
