--- a/res/layout/activity_secretary_question_detail.xml
+++ b/res/layout/activity_secretary_question_detail.xml
@@ -15,14 +15,34 @@
         <include layout="@layout/activity_com" />
     </LinearLayout>
 
+    
+    <TextView
+        android:visibility="gone"
+        
+        android:id="@+id/tv_conversation_type"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="15dp"
+        android:layout_width="wrap_content"
+       	android:layout_height="wrap_content"
+       	android:background="@drawable/rectangle_background_gray_text_secretary_details"
+       	android:gravity="center"
+       	android:text="   "
+       	android:textSize="12dp"
+       	android:textColor="@color/text_gray2"
+       	android:paddingTop="3dp"
+       	android:paddingBottom="3dp"
+       	android:paddingLeft="5dp"
+       	android:paddingRight="5dp"
+        />
+    
     <android.support.v7.widget.RecyclerView
         android:id="@+id/lv_mine_secretary_quetions_detail"
         android:layout_width="match_parent"
         android:layout_weight="1"
         android:layout_height="match_parent"
         android:layout_above="@id/ll_mai_comment_reply"
-        android:layout_below="@+id/top"
-        android:layout_marginTop="@dimen/margin_top_17"/>
+        android:layout_below="@+id/tv_conversation_type"
+        android:layout_marginTop="@dimen/margin_top_17"/><!-- android:layout_below="@+id/top" -->
 
     <LinearLayout
         android:id="@+id/ll_mai_comment_reply"
@@ -60,5 +80,4 @@
             android:textColor="#fff"
             android:textSize="12sp" />
     </LinearLayout>
-
 </LinearLayout>
