--- a/res/layout/my_secretary_ask_multianswer_item.xml
+++ b/res/layout/my_secretary_ask_multianswer_item.xml
@@ -4,6 +4,36 @@
     android:layout_height="wrap_content"
     android:background="#EBEBEB"
     android:orientation="vertical" >
+    
+    
+    
+    <TextView
+        android:visibility="gone"
+        android:id="@+id/tv_conversation_title"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="15dp"
+        android:layout_width="wrap_content"
+       	android:layout_height="wrap_content"
+       	android:background="@drawable/rectangle_background_gray_text_secretary_details"
+       	android:gravity="center"
+       	android:text="离不开好疯狂 "
+       	android:textSize="12dp"
+       	android:textColor="@color/text_gray2"
+       	android:paddingTop="3dp"
+       	android:paddingBottom="3dp"
+       	android:paddingLeft="5dp"
+       	android:paddingRight="5dp"/>
+    
+    
+    <TextView
+        android:visibility="gone"
+        android:id="@+id/tv_conversation_time"
+        android:layout_marginTop="5dp" 
+        android:layout_gravity="center_horizontal"
+        android:text="01-11 上午10:00"
+        style="@style/text_style_big_32"/>
+    
+    
     <RelativeLayout
         android:visibility="gone"
         android:layout_width="match_parent"
