--- a/res/drawable/cicle_back_talk_detail_send.xml
+++ b/res/drawable/cicle_back_talk_detail_send.xml
@@ -3,7 +3,7 @@
     <solid android:color="#fff" />
     <stroke
         android:width="1dp"
-        android:color="#4a00" />
+        android:color="#ebebeb" /><!--android:color="#4a00"   -->
     <corners android:topLeftRadius="5dp"
         android:topRightRadius="5dp"
         android:bottomRightRadius="5dp"
