--- a/res/drawable/toast_bg.xml
+++ b/res/drawable/toast_bg.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <corners android:radius="10dp" />
-<solid android:color="@color/app_black"/>
+<solid android:color="@color/app_black_80"/>
     
     <padding
         android:bottom="5dp"
