--- a/res/layout/my_secretary_ask_answer_item.xml
+++ b/res/layout/my_secretary_ask_answer_item.xml
@@ -4,6 +4,16 @@
     android:layout_height="wrap_content"
     android:background="#EBEBEB"
     android:orientation="vertical" >
+    
+    <TextView
+        android:id="@+id/tv_conversation_time"
+        android:layout_marginTop="5dp" 
+        android:layout_gravity="center_horizontal"
+        android:text="01-11 上午09:00"
+        style="@style/text_style_big_32"
+        android:textSize="12dp"
+       	android:textColor="@color/text_gray2"/>
+    
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
