Yeun.zhang  2016-01-15 版本 1.2.13.0
涉及修改内容：红包内测

--- a/res/drawable/rectangle_four_corner_yellow.xml
+++ b/res/drawable/rectangle_four_corner_yellow.xml
@@ -3,13 +3,13 @@
     android:shape="rectangle"
     android:useLevel="false" >
 
-    <solid android:color="#e0c463" />
+    <solid android:color="#ebc45b" />
 
     <corners 
         android:radius="16dp"/>
     
     <stroke
         android:width="8px"
-        android:color="#efb463" />
+        android:color="#e3a74f" />
 
 </shape>
