--- a/res/layout/activity_mine_history.xml
+++ b/res/layout/activity_mine_history.xml
@@ -121,6 +121,7 @@
         android:divider="@null"
         android:listSelector="@android:color/transparent"
         android:scrollbars="none" 
+        android:overScrollMode="never"
         /><!-- style="@style/w_h_full" -->
     
  </FrameLayout>   
