--- a/res/layout/activity_secretary_question_detail.xml
+++ b/res/layout/activity_secretary_question_detail.xml
@@ -35,14 +35,30 @@
        	android:paddingRight="5dp"
         />
     
-    <android.support.v7.widget.RecyclerView
+   <!--  <android.support.v7.widget.RecyclerView
         android:id="@+id/lv_mine_secretary_quetions_detail"
         android:layout_width="match_parent"
         android:layout_weight="1"
         android:layout_height="match_parent"
         android:layout_above="@id/ll_mai_comment_reply"
         android:layout_below="@+id/tv_conversation_type"
-        android:layout_marginTop="@dimen/margin_top_17"/><!-- android:layout_below="@+id/top" -->
+        android:layout_marginTop="@dimen/margin_top_17"
+       /> --><!-- android:layout_below="@+id/top" -->
+
+      <ListView 
+        android:divider="@null"
+        android:dividerHeight="0dp"
+        android:id="@+id/lv_mine_secretary_quetions_detail"
+        android:layout_width="match_parent"
+        android:layout_weight="1"
+        android:layout_height="match_parent"
+        android:layout_above="@id/ll_mai_comment_reply"
+        android:layout_below="@+id/tv_conversation_type"
+        android:layout_marginTop="@dimen/margin_top_17"
+        android:transcriptMode="alwaysScroll"
+        >
+      </ListView>
+
 
     <LinearLayout
         android:id="@+id/ll_mai_comment_reply"
@@ -66,7 +82,8 @@
             android:maxLines="6"
             android:padding="@dimen/margin_top_20"
             android:textCursorDrawable="@null"
-            android:textSize="14sp" />
+            android:textSize="14sp" 
+            android:isScrollContainer="true"/>
 
         <TextView
             android:id="@+id/btn_secretary_question_commit"
