--- a/res/layout/secretary_detail_footer_new.xml
+++ b/res/layout/secretary_detail_footer_new.xml
@@ -100,7 +100,7 @@
         android:textSize="14sp"
         android:padding="17dp"
         android:gravity="top"
-        android:textColorHint="@color/line_bg"
+        android:textColorHint="@color/text_gray2"
         android:lines="12"
         android:maxLines="20"
         android:lineSpacingExtra="4dp" 
