--- a/res/layout/secretary_life_fragment.xml
+++ b/res/layout/secretary_life_fragment.xml
@@ -124,11 +124,11 @@
                         android:layout_marginTop="10dp"
                         android:lineSpacingExtra="3dp"
                         android:text="
-1:周末想去周边泡个温泉，推荐一些比较好的温泉度假村\n
-2:希望能够找到一个周末授教的法语兴趣班\n
-3:请推荐一下广州周边适合郊游的地方，当日来回\n
-4:小孩3岁，想报个智力开发的班，有什么推荐？坐标北京\n
-5:最近想学习插画，上海哪里有插花课堂呢？
+* 周末想去周边泡个温泉，推荐一些比较好的温泉度假村\n
+* 希望能够找到一个周末授教的法语兴趣班\n
+* 请推荐一下广州周边适合郊游的地方，当日来回\n
+* 小孩3岁，想报个智力开发的班，有什么推荐？坐标北京\n
+* 最近想学习插画，上海哪里有插花课堂呢？
 "
                         android:textColor="#AFAFAF" />
                 </LinearLayout>
