--- a/res/layout/secretary_party_fragment.xml
+++ b/res/layout/secretary_party_fragment.xml
@@ -124,10 +124,10 @@
                         android:layout_marginTop="10dp"
                         android:lineSpacingExtra="3dp"
                         android:text="
-1:孩子要举办个周岁宴，推荐一两家策划公司或者场地，预算3万左右\n
-2:我们教师节要请老师吃饭，办个谢师宴，人均200左右，推荐个适合的酒家\n
-3:公司想要在年中的时候到上海的郊区租个别墅搞派对，预算1万左右，推荐个地方呗\n
-4:年末要结婚了，预算20万左右，推荐个适合的策划公司吧\n
+* 孩子要举办个周岁宴，推荐一两家策划公司或者场地，预算3万左右\n
+* 我们教师节要请老师吃饭，办个谢师宴，人均200左右，推荐个适合的酒家\n
+* 公司想要在年中的时候到上海的郊区租个别墅搞派对，预算1万左右，推荐个地方呗\n
+* 年末要结婚了，预算20万左右，推荐个适合的策划公司吧\n
 "
                         android:textColor="#AFAFAF" />
                 </LinearLayout>
