--- a/res/layout/secretary_shopping_fragment.xml
+++ b/res/layout/secretary_shopping_fragment.xml
@@ -124,11 +124,11 @@
                         android:layout_marginTop="10dp"
                         android:lineSpacingExtra="3dp"
                         android:text="
-1:我在XX，现在XX鞋已经卖断货了，我想知道还有哪里有吗？\n
-2:我的XX表有点坏了，能告诉我哪里能修复吗？\n
-3:我想买一个国外的牌子XX的XX产品，不知道国内目前哪里有得卖？\n
-4:我想收藏一支82年的拉菲，介绍一下渠道\n
-5:下个月我要参加一个很重要的宴会，需要有人帮我进行搭配，能否推荐一下？\n"
+* 我在XX，现在XX鞋已经卖断货了，我想知道还有哪里有吗？\n
+* 我的XX表有点坏了，能告诉我哪里能修复吗？\n
+* 我想买一个国外的牌子XX的XX产品，不知道国内目前哪里有得卖？\n
+* 我想收藏一支82年的拉菲，介绍一下渠道\n
+* 下个月我要参加一个很重要的宴会，需要有人帮我进行搭配，能否推荐一下？\n"
 
                         android:textColor="#AFAFAF" />
                 </LinearLayout>
