--- a/res/layout/secretary_student_fragment.xml
+++ b/res/layout/secretary_student_fragment.xml
@@ -124,10 +124,11 @@
                         android:layout_marginBottom="20dp"
                         android:layout_marginTop="10dp"
                         android:lineSpacingExtra="3dp"
-                        android:text="1:移民去美国大概要花多少钱呢？投资多少钱起?\n
-2:现在欧洲哪个国家的移民政策比较好？\n
-3:想问一下澳洲143签证需要注意些什么吗？\n
-4:现在想要移民去英国有什么需要注意的吗？推荐一下广州的机构\n
+                        android:text="
+* 移民去美国大概要花多少钱呢？投资多少钱起?\n
+* 现在欧洲哪个国家的移民政策比较好？\n
+* 想问一下澳洲143签证需要注意些什么吗？\n
+* 现在想要移民去英国有什么需要注意的吗？推荐一下广州的机构\n
 "
                         android:textColor="#AFAFAF" />
                 </LinearLayout>
