--- a/res/layout/activity_mine_store.xml
+++ b/res/layout/activity_mine_store.xml
@@ -73,7 +73,8 @@
 	        android:background="@color/app_bg"
 	        android:divider="@null"
 	        android:listSelector="@android:color/transparent"
-	        android:scrollbars="none" />
+	        android:scrollbars="none"
+	        android:overScrollMode="never" />
 	
 		     <RelativeLayout 
 		         android:id="@+id/rl_no_postdelay_store"
@@ -93,14 +94,13 @@
 				        <ImageView 
 				            android:layout_width="wrap_content"
 				            android:layout_height="wrap_content"
-				            android:src="@drawable/lv_empty"/>
+				            android:src="@drawable/lv_empty_collection"/>
 				        <TextView 
 				            android:layout_marginTop="10dp"
 				            android:layout_width="wrap_content"
 				            android:layout_height="wrap_content"
-				            android:text="暂无相关门店关注记录哦"
+				            android:text="您还没有关注过门店哦"
 				            android:textColor="@color/line_bg"/>
-				        
 		         </LinearLayout>
 		    </RelativeLayout>
 	     </FrameLayout>
