--- a/res/layout/activity_search_bank_card.xml
+++ b/res/layout/activity_search_bank_card.xml
@@ -78,7 +78,8 @@
             android:dividerHeight="@dimen/margin_top_35"
             android:listSelector="@android:color/transparent"
             android:scrollbars="none"
-            android:visibility="gone" />
+            android:visibility="gone"
+            android:overScrollMode="never" />
         
         
         <!-- 搜索栏内容为空的时候的布局展示 -->
