--- a/res/layout/activity_search_content.xml
+++ b/res/layout/activity_search_content.xml
@@ -49,7 +49,8 @@
 		            android:cacheColorHint="#00000000"
 		            android:divider="@null"
 		            android:listSelector="@android:color/transparent"
-		            android:scrollbars="vertical" />
+		            android:scrollbars="vertical" 
+		            android:overScrollMode="never"/>
 		    </LinearLayout>
     </LinearLayout>
 </LinearLayout>
