--- a/res/layout/my_secretary_question_item.xml
+++ b/res/layout/my_secretary_question_item.xml
@@ -45,14 +45,36 @@
                 android:layout_height="wrap_content"
                 android:textSize="16sp" />
 
-            <TextView
+           <TextView
                 android:id="@+id/my_question_type_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
-                android:background="@drawable/my_question_btn_shape"
+                android:background="@drawable/rectangle_background_gray_text_secretary_details"
                 android:gravity="center"
-                android:textSize="12sp" />
+                android:text="213"
+                android:textSize="12sp" 
+                android:textColor="@color/text_gray2"
+		       	android:paddingTop="3dp"
+		       	android:paddingBottom="3dp"
+		       	android:paddingLeft="5dp"
+		       	android:paddingRight="5dp"/>
+	        <!-- <TextView
+		        android:visibility="gone"
+		        android:id="@+id/tv_conversation_title"
+		        android:layout_gravity="center_horizontal"
+		        android:layout_marginTop="15dp"
+		        android:layout_width="wrap_content"
+		       	android:layout_height="wrap_content"
+		       	android:background=""
+		       	android:gravity="center"
+		       	android:text="离不开好疯狂 "
+		       	android:textSize="12dp"
+		       	android:textColor="@color/text_gray2"
+		       	android:paddingTop="3dp"
+		       	android:paddingBottom="3dp"
+		       	android:paddingLeft="5dp"
+		       	android:paddingRight="5dp"/> -->
         </LinearLayout>
 
         <LinearLayout
