--- a/res/layout/secretary_investment_fragment.xml
+++ b/res/layout/secretary_investment_fragment.xml
@@ -123,10 +123,11 @@
                         android:layout_marginBottom="20dp"
                         android:layout_marginTop="10dp"
                         android:lineSpacingExtra="3dp"
-                        android:text="1:小迈，现在XX行有什么理财产品是比较好的？预算5万元左右\n
-2:我想了解一下XX理财产品的年利率？还有没有类似的其他产品可以推荐一下？\n
-3:我想了解一下投资美国房产的事宜\n
-4:我想了解一下目前市面上，交行的理财产品有哪些
+                        android:text="
+* 小迈，现在XX行有什么理财产品是比较好的？预算5万元左右\n
+* 我想了解一下XX理财产品的年利率？还有没有类似的其他产品可以推荐一下？\n
+* 我想了解一下投资美国房产的事宜\n
+* 我想了解一下目前市面上，交行的理财产品有哪些
 "
                         android:textColor="#AFAFAF" />
                 </LinearLayout>
