--- a/res/layout/secretary_travel_fragment.xml
+++ b/res/layout/secretary_travel_fragment.xml
@@ -125,16 +125,14 @@
                         android:layout_marginBottom="20dp"
                         android:layout_marginTop="10dp"
                         android:lineSpacingExtra="3dp"
-                        android:text="
-1:9月份去日本玩，东京入大阪出，哪里预订机票最划算？\n
+                        android:text="* 9月份去日本玩，东京入大阪出，哪里预订机票最划算？\n* 曼谷有没有性价比比较高的酒店？但是要有点当地特色的\n* 去美国旅游需要准备什么签证材料？\n* 想要了解一下去希腊可以玩些什么？主要是雅典和圣托里尼\n* 推荐几家巴黎的特色餐厅，吃法国菜\n* 公司10月要去德国看展顺便进行行业考察，推荐一下对接的旅行社\n* 怎么去巴黎附近的那个打折村？\n"
+                        android:textColor="#AFAFAF" /><!-- 1:9月份去日本玩，东京入大阪出，哪里预订机票最划算？\n
 2:曼谷有没有性价比比较高的酒店？但是要有点当地特色的\n
 3:去美国旅游需要准备什么签证材料？\n
 4:想要了解一下去希腊可以玩些什么？主要是雅典和圣托里尼\n
 5:推荐几家巴黎的特色餐厅，吃法国菜\n
 6:公司10月要去德国看展顺便进行行业考察，推荐一下对接的旅行社\n
-7:怎么去巴黎附近的那个打折村？\n
-"
-                        android:textColor="#AFAFAF" />
+7:怎么去巴黎附近的那个打折村？\n -->
                 </LinearLayout>
 
                 <TextView
