--- a/res/values-sw240dp/dimens.xml
+++ b/res/values-sw240dp/dimens.xml
@@ -172,6 +172,7 @@
     <dimen name="qr_code_w_460">307dp</dimen>
     <dimen name="qr_code_h_460">307dp</dimen>
     <dimen name="margin_top_120">80dp</dimen>
+    <dimen name="margin_top_150">120dp</dimen>
     <dimen name="mine_v16_w">180dp</dimen>
     <dimen name="mine_v16_h">90dp</dimen>
     <dimen name="images_count_w">47dp</dimen>
