Yeun.zhang 2016-01-20 版本 1.2.13.5
涉及修改内容：红包页面样式和控件的修整

--- a/res/layout/activity_home_old.xml
+++ b/res/layout/activity_home_old.xml
@@ -97,6 +97,7 @@
             
             
              <com.stylingandroid.snowfall.SnowView
+                 android:id="@+id/snow_view"
 				    android:layout_width="match_parent"
 				    android:layout_height="match_parent"
 				    />
