--- a/res/layout/activity_secretary_question_detail.xml
+++ b/res/layout/activity_secretary_question_detail.xml
@@ -56,6 +56,7 @@
         android:layout_below="@+id/tv_conversation_type"
         android:layout_marginTop="@dimen/margin_top_17"
         android:transcriptMode="alwaysScroll"
+        android:overScrollMode="never"
         >
       </ListView>
 
@@ -83,6 +84,7 @@
             android:padding="@dimen/margin_top_20"
             android:textCursorDrawable="@null"
             android:textSize="14sp" 
+            android:textColorHint="@color/text_gray2"
             android:isScrollContainer="true"/>
 
         <TextView
