--- a/res/drawable/progressbar_bg.xml
+++ b/res/drawable/progressbar_bg.xml
@@ -5,7 +5,7 @@
     <item android:id="@android:id/background">
         <shape>
             <corners android:radius="5dp" />
-            <solid android:color="#ffffff" />
+            <solid android:color="@color/transparent" />
         </shape>
     </item>
 
