--- a/res/layout/activity_grab_red_pack_detail.xml
+++ b/res/layout/activity_grab_red_pack_detail.xml
@@ -30,24 +30,54 @@
                 android:layout_gravity="center"
                 android:background="@drawable/arrow_l" />
         </LinearLayout>
+        
+         <LinearLayout
+            android:id="@+id/iv_activity_refresh"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignTop="@id/ll_activity_collection"
+            android:layout_marginRight="@dimen/l_r_35"
+            android:background="@drawable/circle_background_gray_1"
+            android:gravity="center" >
+
+             <com.android.pc.ioc.image.RecyclingImageView
+                style="@style/w_wrap_h_wrap"
+                android:layout_gravity="center"
+                android:background="@drawable/refresh" /> 
+        </LinearLayout>
         <LinearLayout
             android:visibility="gone"
-            
+            android:layout_toLeftOf="@id/iv_activity_refresh"
             android:id="@+id/iv_activity_shared"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
             android:layout_alignTop="@id/ll_activity_collection"
             android:layout_centerInParent="true"
             android:layout_marginRight="@dimen/l_r_35"
             android:background="@drawable/circle_background_gray_1"
             android:gravity="center" >
 
-            <com.android.pc.ioc.image.RecyclingImageView
+             <com.android.pc.ioc.image.RecyclingImageView
                 style="@style/w_wrap_h_wrap"
                 android:layout_gravity="center"
-                android:background="@drawable/shared" />
+                android:background="@drawable/shared1" /> 
         </LinearLayout>
+        
+         <!-- 进度条内容 -->
+         <ProgressBar 
+            android:visibility="gone"
+            android:id="@+id/pb_refresh"
+            style="?android:attr/progressBarStyleHorizontal"
+	        android:layout_gravity="center_vertical" 
+	        android:background="@color/transparent"
+	        android:max="100"
+	        android:progress="20"
+	        android:progressDrawable="@drawable/progressbar_bg"
+            android:layout_height="4dp"
+            android:layout_width="match_parent"
+            /><!-- android:secondaryProgress="70"  -->
     </RelativeLayout>
 
 </RelativeLayout>
