--- a/res/layout/my_secretary_question_item.xml
+++ b/res/layout/my_secretary_question_item.xml
@@ -53,7 +53,7 @@
                 android:background="@drawable/rectangle_background_gray_text_secretary_details"
                 android:gravity="center"
                 android:text="213"
-                android:textSize="12sp" 
+                android:textSize="12dp" 
                 android:textColor="@color/text_gray2"
 		       	android:paddingTop="3dp"
 		       	android:paddingBottom="3dp"
@@ -86,7 +86,8 @@
             <TextView
                 android:id="@+id/my_question_time"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content" 
+                android:textColor="@color/text_gray4"/>
 
             <TextView
                 android:id="@+id/have_information"
