--- a/res/layout/activity_grab_red_pack_detail.xml
+++ b/res/layout/activity_grab_red_pack_detail.xml
@@ -6,7 +6,11 @@
     <com.lansun.qmyo.view.ObservableWebView
         android:id="@+id/webView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent" /> 
+    <!-- <WebView
+        android:id="@+id/webView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" /> -->
 
     <RelativeLayout
         android:id="@+id/ll_promote_detail_title"
