--- a/res/layout/dialog_random_num.xml
+++ b/res/layout/dialog_random_num.xml
@@ -43,19 +43,18 @@
             android:id="@+id/tv_random_num"
             android:background="@color/app_bg"
             style="@style/text_style_small_27"
-            android:layout_width="320dip"
+            android:layout_width="300dp"
             android:layout_height="85dip"
             android:gravity="center"
             android:layout_marginTop="@dimen/margin_top_35"
             android:text="960886"
             android:textColor="@color/command_new" 
-            android:textSize="55dp"
-            android:textScaleX="1.2"
-            /><!--  android:paddingLeft="5dp"
+            android:textSize="55dp"/><!--  android:paddingLeft="5dp"
             android:paddingRight="5dp"   
-            android:typeface="sans"  android:layout_marginBottom="@dimen/margin_top_20"-->
+            android:typeface="sans"  android:layout_marginBottom="@dimen/margin_top_20" android:textScaleX="1.2"-->
         
         <TextView
+            android:visibility="gone"
             android:paddingTop="5dp"
             android:paddingBottom="5dp"
             android:paddingLeft="10dp"
