--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -44,22 +44,22 @@
     <style name="GrabActivityTheme" parent="AppBaseTheme">
         <item name="android:windowNoTitle">true</item>
         <item name="android:windowActionBar">false</item>
-        <item name="android:windowBackground">@color/transparent</item>
+        <!-- <item name="android:windowBackground">@color/transparent</item>
         <item name="android:foreground">@android:color/transparent</item>
-        <item name="android:background">@android:color/transparent</item>
-        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:background">@android:color/transparent</item> 
+        <item name="android:windowIsTranslucent">true</item> -->
     </style>
     
     
      <style name="Translucent_NoTitle" parent="android:style/Theme.Dialog">
-        <item name="android:background">#00000000</item> <!-- 设置自定义布局的背景透明 -->
+       <!--  <item name="android:background">#00000000</item> 设置自定义布局的背景透明 -->
         <item name="android:windowBackground">@color/transparent</item> <!-- 设置window背景透明，也就是去边框 -->
         
-         <item name="android:windowFrame">@null</item>    
+        <!--  <item name="android:windowFrame">@null</item>    
         <item name="android:windowIsFloating">true</item>  
         <item name="android:windowContentOverlay">@null</item>  
-        <!-- 设置无遮罩层 -->  
-        <item name="android:backgroundDimEnabled">true</item>  
+        设置无遮罩层  
+        <item name="android:backgroundDimEnabled">true</item>  --> 
     </style>
     
 
@@ -114,6 +114,12 @@
      <!-- 加入了gif的CustomProgressDialog --><!-- parent="@style/CustomDialog" -->
     <style name="CustomProgressDialog" >  
         <item name="android:windowBackground">@android:color/transparent</item>  
+        <item name="android:windowNoTitle">true</item>  
+    </style>  
+    
+     <!-- 加入了gif的CustomProgressDialog --><!-- parent="@style/CustomDialog" -->
+    <style name="CustomProgressDialogWait" >  
+        <item name="android:windowBackground">@color/background</item> <!-- 设置window背景透明，也就是去边框 -->
         <item name="android:windowNoTitle">true</item>  
         
     </style>  
